--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "cross-fetch": "^1.1.1",
     "fetch": "^1.1.0",
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-app-init": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
